--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Medicamentos - FMMN</title>
-    <link rel="icon" type="image/jpeg" href="/icon.jpg">
+    <link rel="icon" type="image/jpeg" href="icon.jpg">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -154,7 +154,7 @@
 
     <div class="flex flex-col min-h-screen">
         <header class="bg-white shadow-md p-4 flex items-center no-print">
-            <img src="/logo.jpg" alt="Logo FMMN" class="h-12 w-12 rounded-full">
+            <img src="logo.jpg" alt="Logo FMMN" class="h-12 w-12 rounded-full">
             <div class="ml-4">
                 <h1 class="text-xl font-bold text-azul-sereno">Fundación María Madre de los Niños</h1>
                 <p class="text-sm text-gris-suave">Formulario de Registro de Medicamentos</p>
@@ -260,7 +260,7 @@
             <tr>
                 <td>
                     <div id="print-header" style="display: flex; align-items: center; border-bottom: 2px solid #3E7BFA; padding-bottom: 1rem; margin-bottom: 1rem;">
-                        <img src="/logo.jpg" alt="Logo FMMN" style="height: 60px; width: 60px; border-radius: 50%;">
+                        <img src="logo.jpg" alt="Logo FMMN" style="height: 60px; width: 60px; border-radius: 50%;">
                         <div style="margin-left: 1rem;">
                             <h1>Fundación María Madre de los Niños</h1>
                             <p>Reporte de Entrega de Medicamentos</p>
@@ -461,3 +461,4 @@
 </body>
 
 </html>
+
